--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <button class ='button'>Del</button>
           <button class ='button'>CE</button>
           <button class ='button' value="-">+/-</button>
-          <button class ='button' value="%">%</button>
-          <button class ='button' value="^">^</button>
+          <button class ='button' value="%"id="operation" >%</button>
+          <button class ='button' value="^" id="operation">^</button>
           <button class ='button' value="/" id="operation">/</button>
           <button class ='button key' value="7">7</button>
           <button class ='button key' value="8">8</button>
